--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,12 @@ body {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.App::-webkit-scrollbar {
+body::-webkit-scrollbar {
 	display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.App {
+body {
 	-ms-overflow-style: none; /* IE and Edge */
 	scrollbar-width: none; /* Firefox */
 }
