--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,13 @@ body {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
+html::-webkit-scrollbar {
 	display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-body {
-	-ms-overflow-style: none; /* IE and Edge */
+/* Hide scrollbar for IE, Edge add Firefox */
+html {
+	-ms-overflow-style: none;
 	scrollbar-width: none; /* Firefox */
 }
 
