Updated contests pages

--- a/src/components/Subscribe.css
+++ b/src/components/Subscribe.css
@@ -1,4 +1,4 @@
-.form {
+/* .form {
 	width: 325px;
 	align-items: center;
 	align-self: center;
@@ -70,4 +70,4 @@
 	display: flex;
 	justify-content: center;
 	color: gray;
-}
+} */
