--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: #4d4847;
+	background-color: #c4c4c4;
 }
 
 code {
